--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,6 @@
 
 html{
     scroll-behavior: smooth;
-    margin: 0;
-    font-size: 18px;
 }
 body {
     margin: 0;
@@ -32,6 +30,7 @@ nav ul li{
     padding-right: 1em;
 }
 a{
+    font-family: 'Lato', sans-serif;
     color: #402116;
     text-decoration: none;
 }
@@ -61,10 +60,24 @@ h2 {
     text-align: center;
     padding: 0;
 }
+h5 {
+    font-weight: 900;
+    font-size: 1em;
+}
+article a:nth-of-type(1) {
+    background: rgb(80, 159, 4);
+    padding: 12px 4em;
+    border-radius: 4px;
+    top: 90vh;
+    position: absolute;
+    top: 90%;
+    right: 36%;
+    font-size: 18px;
+}
 h1 span {
     font-family: 'Lato', sans-serif;
-    font-size: 7rem;
-    line-height: 4.2rem;
+    font-size: 1.74em;
+    line-height: 4.5rem;
 }
 p {
     font-family: 'Lato', sans-serif;
@@ -89,16 +102,6 @@ p {
 .header {
     width: 5em;
     padding: 4em 0 0 1em;
-}
-.button {
-    background: rgb(80, 159, 4);
-    display: inline-block;
-    background-blend-mode: color-burn;
-    padding: 12px 2em;
-    text-align: center;
-    margin-left: 40%;
-    margin-top: 54vh;
-    border-radius: 4px;
 }
 .space {
     padding-top: 1em;
